--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "type": "git",
     "url": "git+https://github.com/jakebonk/webpmux-info.git"
   },
+  "dependencies": {
+    
+  },
+  "devDependencies": {
+
+  },
   "keywords": [
     "webp",
     "webpmux",
